--- a/.env
+++ b/.env
@@ -1,4 +1,4 @@
-DATABASE_URL=mongodb://localhost:27017/MEVN?readPreference=primary&appname=MongoDB%20Compass&directConnection=true&ssl=false
+DATABASE_URL=mongodb+srv://103tmdt:103tmdt@cluster0.et7xk.mongodb.net/mevn?authSource=admin&replicaSet=atlas-w2zjyu-shard-0&w=majority&readPreference=primary&appname=MongoDB%20Compass&retryWrites=true&ssl=true
 AT_SECRET=at-secret
 RT_SECRET=rt-secret
 JWT_VERIFICATION_TOKEN_SECRET=7AnEd5epXmdaJfUrokkQ
